--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
             5
         ],
         "no-console": "off",
+        "import/extensions":"off",
         "no-return-await": "off"
         
     }
