--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
         ],
         "no-console": "off",
         "import/extensions":"off",
+        "import/prefer-default-export":"off",
         "no-return-await": "off"
         
     }
