--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "rafo-node",
   "type": "module",
+  "private": true,
   "version": "1.0.0",
   "description": "homework",
   "main": "server.js",
@@ -12,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "fs-extra": "^10.1.0",
     "nodemon": "^2.0.16"
