--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
+    "express-validator": "^6.14.2",
     "fs-extra": "^10.1.0",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.16"
   },
   "devDependencies": {
