--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,7 +19,8 @@
         "no-console": "off",
         "import/extensions":"off",
         "import/prefer-default-export":"off",
-        "no-return-await": "off"
+        "no-return-await": "off",
+        "no-underscore-dangle":"off"
         
     }
 }
