--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
     "fs-extra": "^10.1.0",
+    "mongoose": "^6.4.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.16"
   },
